<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_splash_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/splash_name"
        android:background="@drawable/style_corners"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/create_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/tv_register"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_name"
        app:layout_constraintStart_toStartOf="@id/tv_splash_name"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/style_corners"
        android:backgroundTint="@color/white"
        android:hint="@string/et_create_name"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_name" />



    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:inputType="textEmailAddress"
        android:hint="@string/et_create_email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/style_corners"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:inputType="textPassword"
        android:hint="@string/et_create_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/style_corners"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText2"/>

    <TextView
        android:id="@+id/tv_suger_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_suger_password"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editTextText3"
        app:layout_constraintTop_toBottomOf="@id/editTextText3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottom_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_aceptar"
        android:background="@drawable/style_corners"
        android:textColor="@color/white_gray"
        android:backgroundTint="@color/gray"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        app:layout_constraintTop_toBottomOf="@id/tv_suger_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>